# temp-rust-cxx-demo

./: Cargo.toml  Embed.toml  build.rs
.cargo/: config.toml
src/: cppfile.cc  cppfile.h  main.rs
