[package]
name = "stm32f4-cxx"
version = "0.1.0"
authors = ["huszty"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
cxx = { version = "1.0.110", default-features = false, features = ["alloc"] }

[dependencies.stm32f4xx-hal]
version = "0.17.1"
features = ["stm32f401", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"

[build-dependencies]
cxx-build = "1.0.110"
